--- a/Changes
+++ b/Changes
@@ -5,7 +5,8 @@
     * SPVM::Builder::Config: Add warn_ccflags, language_ccflags, compiler_ccflags, runtime_ccflags, ld_ccflags, warn_ldflags and debug_ldflags fields.
   [Incompatible Change]
     * SPVM::Builder::Config: Remove mingw_ccflags field for backward compatibility and move its Windows settings to runtime_ccflags.
-  
+  [Changes]
+    * SPVM::Builder::Config: Add std_sep field to support different separators for the -std option and update documentation.
 0.990136 2026-02-25
   [New Features]
     * Add language and dialect fields to SPVM::Builder::Config.
