--- a/Changes
+++ b/Changes
@@ -6,7 +6,7 @@
   [Incompatible Change]
     * SPVM::Builder::Config: Remove mingw_ccflags field for backward compatibility and move its Windows settings to runtime_ccflags.
   [Changes]
-    * SPVM::Builder::Config: Add std_sep field to support different separators for the -std option and update documentation.
+    * SPVM::Builder::Config: Add option_sep field to support different separators for the -std option and update documentation.
 0.990136 2026-02-25
   [New Features]
     * Add language and dialect fields to SPVM::Builder::Config.
