--- a/Changes
+++ b/Changes
@@ -11,8 +11,23 @@
     * Add lib_option_suffix field to SPVM::Builder::Config.
   [Incompatible Change]
     * SPVM::Builder::Config: Remove mingw_ccflags field for backward compatibility and move its Windows settings to runtime_ccflags.
+    * SPVM::Builder::Config: Remove new_gnu99 and new_gnu11 method,
+      because Enforce C99 as the default C language standard for the entire SPVM ecosystem to improve portability and fix the actual standard from GNU99 to C99.
+      Add a note for Linux users: If some functions like lstat are not found when using the C99 standard, 
+      insert the following code at the beginning of the C source file:
+
+        #ifdef __linux__
+          /* Enable X/Open System Interfaces (SUSv4) functions and POSIX.1-2008 standard functions */
+          #define _XOPEN_SOURCE 700
+
+          /* Enable BSD and System V extensions */
+          #define _DEFAULT_SOURCE
+        #endif
+
   [Changes]
     * SPVM::Builder::Config: Add option_sep field to support different separators for the -std option and update documentation.
+    * Update spvmdist to use the new_c99 method by default in the generated 
+      native class configuration files to enforce the C99 standard for new modules.
 0.990136 2026-02-25
   [New Features]
     * Add language and dialect fields to SPVM::Builder::Config.
